--- a/app/globals.css
+++ b/app/globals.css
@@ -41,8 +41,25 @@ body {
   /* Slower scrolling */
 }
 
-@media (max-width: 375px) {
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-in {
+  opacity: 0;
+  animation: fade-in 1s ease-out forwards;
+}
+
+/* @media (max-width: 375px) {
   .start-up {
     font-size: 0.8rem;
   }
-}
+} */
