--- a/app/globals.css
+++ b/app/globals.css
@@ -63,3 +63,46 @@ body {
     font-size: 0.8rem;
   }
 } */
+
+
+.gradient-text {
+  background: linear-gradient(to left,
+      rgba(57, 55, 61, 0.6),
+      rgba(64, 60, 76, 0.6),
+      rgba(64, 60, 76, 0.6),
+      rgba(82, 78, 93, 0.6),
+      rgba(118, 111, 139, 0.9),
+      rgba(118, 111, 139, 0.9),
+      rgba(57, 55, 61, 0.6),
+      rgba(57, 55, 61, 0.6));
+  background-clip: text;
+  color: transparent;
+  padding: 1rem 0;
+  background-size: 200% auto;
+  animation: pulse 7s ease-in-out infinite;
+  -webkit-text-stroke: .2px rgb(112, 112, 112);
+}
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 200% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes pulse {
+
+  0%,
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  50% {
+    transform: scale(1.05);
+    opacity: 0.8;
+  }
+}
